WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149337
WebCore shouldn't have to include DFG headers
https://bugs.webkit.org/show_bug.cgi?id=149337
Summary
WebCore shouldn't have to include DFG headers
Filip Pizlo
Reported
2015-09-17 22:48:56 PDT
WebCore shouldn't have to include DFG headers
Attachments
Patch
(131.88 KB, patch)
2015-09-17 22:49 PDT
,
Filip Pizlo
msaboff
: review+
Details
Formatted Diff
Diff
patch for landing
(132.72 KB, patch)
2015-09-21 10:43 PDT
,
Filip Pizlo
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(136.04 KB, patch)
2015-09-21 12:03 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2015-09-17 22:49:27 PDT
Created
attachment 261494
[details]
Patch
Michael Saboff
Comment 2
2015-09-17 22:52:45 PDT
Comment on
attachment 261494
[details]
Patch r=me
Simon Fraser (smfr)
Comment 3
2015-09-18 08:37:06 PDT
V. nice. Any way we can prevent inadvertent regressions in future (maybe some include-trap macros?).
Mark Lam
Comment 4
2015-09-18 08:39:49 PDT
(In reply to
comment #3
)
> V. nice. > > Any way we can prevent inadvertent regressions in future (maybe some > include-trap macros?).
The patch already puts all the DFG header files in the project group (vs private), which has the side effect of making them not reachable from WebCore. If something in WebCore tries to #include them, the build will fail.
Filip Pizlo
Comment 5
2015-09-21 10:43:16 PDT
Created
attachment 261662
[details]
patch for landing
WebKit Commit Bot
Comment 6
2015-09-21 11:35:22 PDT
Comment on
attachment 261662
[details]
patch for landing Rejecting
attachment 261662
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'build', '--no-clean', '--no-update', '--build-style=release', '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ailed: CompileC /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/AccessibilityMediaControls.o accessibility/AccessibilityMediaControls.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler CompileC /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/AccessibilityRenderObject.o accessibility/AccessibilityRenderObject.cpp normal x86_64 c++ com.apple.compilers.llvm.clang.1_0.compiler (2 failures) Full output:
http://webkit-queues.webkit.org/results/193873
Filip Pizlo
Comment 7
2015-09-21 12:03:13 PDT
Created
attachment 261674
[details]
patch for landing Had to add more fixes for the new tail call code.
WebKit Commit Bot
Comment 8
2015-09-21 12:18:03 PDT
Attachment 261674
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/CallLinkInfo.h:321: The parameter name "shuffleData" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 9
2015-09-21 13:08:22 PDT
Comment on
attachment 261674
[details]
patch for landing I'll land manually.
Filip Pizlo
Comment 10
2015-09-21 13:10:45 PDT
Landed in
http://trac.webkit.org/changeset/190073
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug