Source/JavaScriptCore/dfg/DFGDesiredIdentifiers.cpp
@@ -29,6 +29,7 @@
 #if ENABLE(DFG_JIT)
 
 #include "CodeBlock.h"
+#include "DFGCommonData.h"
 #include "JSCInlines.h"
 
 namespace JSC { namespace DFG {
